(env
  (_
    (js_of_ocaml (targets js wasm))))

(library
 (name test)
 (inline_tests
  (modes js native)
  (flags -verbose))
 (libraries ctypes ctypes_stubs_js)
 (modules
  (:standard \ link))
 (js_of_ocaml)
 (preprocess
  (pps ppx_expect)))

(executable
 (name link)
 (libraries ctypes ctypes_stubs_js)
 (link_flags -linkall)
 (js_of_ocaml)
 (modules link)
 (modes js native))

(rule
 (alias runtest-js)
 (action
  (run node %{dep:./link.bc.js})))

(rule
  (alias runtest-wasm)
  (deps link.bc.wasm.js)
  (action
    (run node %{deps})))

(alias
  (name runtest)
  (deps (alias runtest-js) (alias runtest-wasm)))
